--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="intro">
       <div class="intro-text">
-        <h1>Hi, I am John,<br />Creative Technologist</h1>
+        <h1>Hi, I am Jayanth,<br />Aspiring Software Developer</h1>
         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         <button onclick="downloadResume()">Download Resume</button>
       </div>
