--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <header>
     <div class="container">
-      <h1>Your Name</h1>
-      <p>Web Developer | Designer | Freelancer</p>
+      <h1>V Jayanth</h1>
+      <p>Web developer</p>
       <nav>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
@@ -24,7 +24,7 @@
   <section id="about">
     <div class="container">
       <h2>About Me</h2>
-      <p>Hello! I'm a passionate web developer based in Bengaluru, India. I specialize in building responsive and user-friendly websites.</p>
+      <p>Hello! I'm a passionate aspiring web developer based in Bengaluru, India. I specializing in building responsive and user-friendly websites.</p>
     </div>
   </section>
 
@@ -35,8 +35,8 @@
         <li>HTML5 & CSS3</li>
         <li>JavaScript</li>
         <li>React</li>
-        <li>Node.js</li>
         <li>Git & GitHub</li>
+        <li>Java</li>
       </ul>
     </div>
   </section>
@@ -60,9 +60,9 @@
   <section id="contact">
     <div class="container">
       <h2>Contact</h2>
-      <p>Email: your.email@example.com</p>
-      <p>Phone: +91-1234567890</p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
+      <p>Email: vjayanthh@gmail.com</p>
+      <p>Phone: 9741034473</p>
+      <p>X: <a href="@vjayanthh" target="_blank">yourprofile</a></p>
     </div>
   </section>
 
