--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h2>Contact</h2>
       <p>Email: vjayanthh@gmail.com</p>
       <p>Phone: 9741034473</p>
-      <p>X: <a href="@vjayanthh" target="_blank">yourprofile</a></p>
+      <p>X: <a href="@vjayanthh" target="_blank">@vjayanthh</a></p>
     </div>
   </section>
 
