--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <p>A personal portfolio website to showcase my projects and skills.</p>
         </div>
         <div class="project-card">
-          <h3>Task Manager App</h3>
-          <p>A web application to manage daily tasks with user authentication.</p>
+          <h3>AI portait generator</h3>
+          <p>A web application which genertes portrait images accoding to the user data and prompt.</p>
         </div>
       </div>
     </div>
