--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Your Name. All rights reserved.</p>
+      <p>&copy; 2025 Jayanth. All rights reserved.</p>
     </div>
   </footer>
 </body>
