--- a/index.html
+++ b/index.html
@@ -1,78 +1,140 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>V Jayanth - Portfolio</title>
 
-  <title>Your Name - Portfolio</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- AOS CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>V Jayanth</h1>
-      <p>Web developer</p>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-      </nav>
+  <!-- Header / Hero -->
+  <header class="hero d-flex align-items-center justify-content-center text-center">
+    <div>
+      <h1 class="display-4">V Jayanth</h1>
+      <p class="lead">Web Developer & Creative Coder</p>
+      <div class="mt-3">
+        <a href="#projects" class="btn btn-primary me-2">View Projects</a>
+        <a href="#contact" class="btn btn-outline-light">Contact Me</a>
+      </div>
+      <button id="themeToggle" class="btn btn-sm mt-3 btn-secondary">Toggle Theme</button>
     </div>
   </header>
 
-  <section id="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>Hello! I'm a passionate aspiring web developer based in Bengaluru, India. I specializing in building responsive and user-friendly websites.</p>
+  <!-- About Section -->
+  <section id="about" class="container py-5" data-aos="fade-up">
+    <div class="row align-items-center">
+      <div class="col-md-5 text-center">
+        <img src="https://via.placeholder.com/300" class="img-fluid rounded-circle" alt="V Jayanth" />
+      </div>
+      <div class="col-md-7">
+        <h2>About Me</h2>
+        <p>I'm <strong>V Jayanth</strong>, a curious and creative web developer based in Bengaluru. I enjoy crafting beautiful, functional interfaces and solving real-world problems with code. From responsive layouts to dynamic applications, I bring passion, precision, and a touch of flair to every project. Let’s build something amazing together!</p>
+      </div>
     </div>
   </section>
 
-  <section id="skills">
-    <div class="container">
+  <!-- Skills Section -->
+  <section id="skills" class="bg-light py-5" data-aos="fade-right">
+    <div class="container text-center">
       <h2>Skills</h2>
-      <ul class="skills-list">
-        <li>HTML5 & CSS3</li>
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>Git & GitHub</li>
-        <li>Java</li>
-      </ul>
+      <div class="row mt-4">
+        <div class="col-6 col-md-2 mb-3"><span class="badge bg-primary">HTML5</span></div>
+        <div class="col-6 col-md-2 mb-3"><span class="badge bg-primary">CSS3</span></div>
+        <div class="col-6 col-md-2 mb-3"><span class="badge bg-primary">JavaScript</span></div>
+        <div class="col-6 col-md-2 mb-3"><span class="badge bg-primary">React</span></div>
+        <div class="col-6 col-md-2 mb-3"><span class="badge bg-primary">Java</span></div>
+        <div class="col-6 col-md-2 mb-3"><span class="badge bg-primary">Git & GitHub</span></div>
+      </div>
     </div>
   </section>
 
-  <section id="projects">
-    <div class="container">
+  <!-- Projects Section -->
+  <section id="projects" class="py-5" data-aos="fade-left">
+    <div class="container text-center">
       <h2>Projects</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <h3>Portfolio Website</h3>
-          <p>A personal portfolio website to showcase my projects and skills.</p>
+      <div class="row mt-4">
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Portfolio Website</h5>
+              <p class="card-text">A personal portfolio website to showcase my projects and skills.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">View Demo</a>
+            </div>
+          </div>
         </div>
-        <div class="project-card">
-          <h3>AI portait generator</h3>
-          <p>A web application which genertes portrait images accoding to the user data and prompt.</p>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">AI Portrait Generator</h5>
+              <p class="card-text">A web app that generates portrait images based on user input and prompts.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">View Demo</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Attendance Tracker</h5>
+              <p class="card-text">A Java + MySQL app for tracking attendance with real-time analytics.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">View Demo</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="contact">
-    <div class="container">
+  <!-- Contact Section -->
+  <section id="contact" class="bg-light py-5" data-aos="fade-up">
+    <div class="container text-center">
       <h2>Contact</h2>
-      <p>Email: vjayanthh@gmail.com</p>
-      <p>Phone: 9741034473</p>
-      <p>X: <a href="@vjayanthh" target="_blank">@vjayanthh</a></p>
+      <p>Email: <a href="mailto:vjayanthh@gmail.com">vjayanthh@gmail.com</a></p>
+      <p>Phone: <a href="tel:+919741034473">9741034473</a></p>
+      <p><a href="https://x.com/vjayanthh" target="_blank"><i class="fab fa-x-twitter me-1"></i>@vjayanthh</a></p>
     </div>
   </section>
 
-  <footer>
+  <!-- Footer -->
+  <footer class="text-center py-3">
     <div class="container">
-      <p>&copy; 2025 Jayanth. All rights reserved.</p>
+      <p>&copy; 2025 V Jayanth. All rights reserved.</p>
+      <button id="themeToggleFooter" class="btn btn-sm btn-outline-secondary">Toggle Theme</button>
     </div>
   </footer>
+
+  <!-- JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+    const toggleTheme = () => {
+      const currentTheme = document.documentElement.getAttribute('data-theme');
+      const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+      document.documentElement.setAttribute('data-theme', newTheme);
+      localStorage.setItem('theme', newTheme);
+    }
+    document.getElementById('themeToggle').onclick = toggleTheme;
+    document.getElementById('themeToggleFooter').onclick = toggleTheme;
+
+    // Load saved theme
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme) {
+      document.documentElement.setAttribute('data-theme', savedTheme);
+    }
+  </script>
 </body>
 </html>
